Enhance role-based access control and logging configuration
Updated role-based access control to use fine-grained permissions across decision-related controllers. Added new permission entries for decisions, types, and decision-making bodies, and adjusted logging levels for more detailed debugging and info output.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,11 +27,11 @@ server:
 
 logging:
   level:
-    root: ERROR
-    kg.infosystems: ERROR
-    org.springframework: ERROR
-    org.hibernate: ERROR
-    com.zaxxer.hikari: ERROR
+    root: INFO
+    kg.infosystems: DEBUG
+    org.springframework: DEBUG
+    org.hibernate: DEBUG
+    com.zaxxer.hikari: INFO
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 
